{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 9,
  "lineage": "67c0aea1-cd35-db9d-28fe-fe03fd497af0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "bench",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:subnet/subnet-01f47cdcaa914eb5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f47cdcaa914eb5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821579665641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f348cfcd794ffff4"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:vpc/vpc-0f348cfcd794ffff4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a3290beaa76672bf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06853cc2806207df0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f348cfcd794ffff4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03b22b90d258cbb51",
            "owner_id": "821579665641"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bench",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "receiver",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bc554a9635a77c8",
            "arn": "arn:aws:ec2:eu-central-1:821579665641:instance/i-0ab24eb45cc6f0cd5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab24eb45cc6f0cd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "spectral-bench",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_group": "spectral-cluster",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086775e7f363fa489",
            "private_dns": "ip-172-31-47-71.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.71",
            "public_dns": "ec2-18-195-147-32.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.147.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0914a55ad87bc5f2a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "spectral-bench"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f47cdcaa914eb5e",
            "tags": {
              "Name": "spectral-receiver",
              "Role": "receiver"
            },
            "tags_all": {
              "Name": "spectral-receiver",
              "Role": "receiver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01be71d77f59fb333"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bench",
            "aws_placement_group.bench",
            "aws_security_group.bench",
            "data.aws_ami.ubuntu",
            "data.aws_subnet.bench",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "sender",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bc554a9635a77c8",
            "arn": "arn:aws:ec2:eu-central-1:821579665641:instance/i-065828f5c2603d535",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065828f5c2603d535",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "spectral-bench",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_group": "spectral-cluster",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e88f8d30954498c2",
            "private_dns": "ip-172-31-47-109.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.109",
            "public_dns": "ec2-3-124-187-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.187.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0165f685560958d7b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "spectral-bench"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f47cdcaa914eb5e",
            "tags": {
              "Name": "spectral-sender",
              "Role": "sender"
            },
            "tags_all": {
              "Name": "spectral-sender",
              "Role": "sender"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01be71d77f59fb333"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bench",
            "aws_placement_group.bench",
            "aws_security_group.bench",
            "data.aws_ami.ubuntu",
            "data.aws_subnet.bench",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bench",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:security-group/sg-01be71d77f59fb333",
            "description": "Benchmark hosts: administrative SSH plus unrestricted traffic between members.",
            "egress": [],
            "id": "sg-01be71d77f59fb333",
            "ingress": [],
            "name": "spectral-bench",
            "name_prefix": "",
            "owner_id": "821579665641",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f348cfcd794ffff4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:security-group-rule/sgr-0a9761ebceb8a7602",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Package installation and outbound benchmark traffic.",
            "from_port": null,
            "id": "sgr-0a9761ebceb8a7602",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01be71d77f59fb333",
            "security_group_rule_id": "sgr-0a9761ebceb8a7602",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bench",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:security-group-rule/sgr-01f6a9bef3159ebb9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Measured path between benchmark hosts.",
            "from_port": null,
            "id": "sgr-01f6a9bef3159ebb9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01be71d77f59fb333",
            "security_group_id": "sg-01be71d77f59fb333",
            "security_group_rule_id": "sgr-01f6a9bef3159ebb9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bench",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:821579665641:security-group-rule/sgr-09c1770c11b4629dc",
            "cidr_ipv4": "24.135.105.8/32",
            "cidr_ipv6": null,
            "description": "Administrative SSH from the operator.",
            "from_port": 22,
            "id": "sgr-09c1770c11b4629dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01be71d77f59fb333",
            "security_group_rule_id": "sgr-09c1770c11b4629dc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bench",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}